# cycle-roll

./: .gitignore  README.md  cycle-roll.cabal  cycle-roll.hs  makefile  show-cycle-elements.hs
src/Data/: CycleRoll.hs
src/Data/CycleRoll/: LCP.hs  Prepare.hs  RSeqNode.hs  RSequence.hs  Sequence.hs  SubSeq.hs  SuffixArray.hs  Util.hs
src/Data/CycleRoll/Internal/: Algorithm.hs  LCP.hs  Prepare.hs  RSequence.hs  Sequence.hs  SubSeq.hs  SuffixArray.hs
src/Data/CycleRoll/Internal/RSequence/: Node.hs
src/Data/CycleRoll/RSequence/: Node.hs
test/: MainTestSuite.hs  show-cycle-elements.hs
test/Data/CycleRoll/: LCPTest.hs  PrepareTest.hs  RSeqNodeTest.hs  SubSeqTest.hs  SuffixArrayTest.hs  Test.hs
test/Data/CycleRoll/Internal/: LCPTest.hs  PrepareTest.hs  SubSeqTest.hs  SuffixArrayTest.hs
test/Data/CycleRoll/Internal/RSequence/: NodeTest.hs
test/Test/: Utils.hs
