name:               cycle-roll
version:            0.0.1
license:            GPL-3
license-file:       LICENSE
author:             anthony cantor
maintainer:         anthony cantor
copyright:          (c) 2013 anthony cantor
synopsis:           pattern match cycles in data
description:        compress the cycles into cycle rolls.
cabal-version:      >=1.8
build-type:         Simple

executable cycle-roll
  build-depends:
    base,
    containers,
    heaps,
    vector == 0.7.1,
    suffixarray,
    IntervalMap == 0.3.0.3,
    rangemin,
    pipes,
    primitive
  main-is:          cycle-roll.hs
  hs-source-dirs:   ., src

executable show-cycle-elements
  hs-source-dirs:   ., src
  main-is:          show-cycle-elements.hs
  build-depends:
    base,
    containers,
    heaps,
    vector == 0.7.1,
    suffixarray,
    IntervalMap == 0.3.0.3,
    rangemin,
    pipes,
    primitive

library
  hs-source-dirs:   src
  exposed-modules:  
    Data.CycleRoll,
    Data.CycleRoll.Prepare
    Data.CycleRoll.RSequence,
    Data.CycleRoll.RSequence.Node
  other-modules:
    Data.CycleRoll.Internal.LCP,
    Data.CycleRoll.Internal.SuffixArray,
    Data.CycleRoll.Internal.Sequence,
    Data.CycleRoll.Internal.RSequence,
    Data.CycleRoll.Internal.RSequence.Node,
    Data.CycleRoll.Internal.SubSeq,
    Data.CycleRoll.Internal.Prepare,
    Data.CycleRoll.Internal.Algorithm
  build-depends:
    base,
    containers,
    heaps,
    vector == 0.7.1,
    suffixarray,
    IntervalMap == 0.3.0.3,
    rangemin,
    pipes,
    primitive
  ghc-options:      
    -Wall
    -O2

test-suite tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test, src
  main-is:          MainTestSuite.hs
  build-depends:
    base,
    containers,
    heaps,
    vector == 0.7.1,
    suffixarray,
    IntervalMap == 0.3.0.3,
    rangemin,
    pipes,
    primitive,
    HUnit,
    QuickCheck,
    test-framework,
    test-framework-hunit,
    test-framework-quickcheck2
